Alignment fix, background colour fixed to collection point and cursor clickable hover added

--- a/terminal/src/containers/select-collection-point-popup-window/style.css
+++ b/terminal/src/containers/select-collection-point-popup-window/style.css
@@ -7,14 +7,14 @@
   float: left;
   border-radius: 12px;
   text-align: left;
+  background: #4B3451;
+  cursor: pointer;
   
-  
-  padding: 23px;
+  padding: 20px 20px 10px 20px;
 }
 
 .collectionPointButton:hover{
   background-color: #694972; 
-  color: white;
 }
 
 
@@ -34,4 +34,5 @@
 .collectionPointButton img {
   width: 100%;
   height: auto;
+  border-radius: 7px;
 }
